Updated Products Page
Updated Products Page and Pom.xml files and uncommented code in Home Page

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -52,6 +52,13 @@
 
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.javatuples/javatuples -->
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>net.serenity-bdd</groupId>
